--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,18 +1,22 @@
-<!--
-  Generated template for the SettingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>settings</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Settings</ion-title>
   </ion-navbar>
 
+  <ion-toolbar no-border-top>
+    <!-- <ion-segment [(ngModel)]="segmentModel"> -->
+		<tabs-directive [tabmodel]="tabs" (segmentChange)="segmentValueChange($event);" [tabselected]="segmentModel"></tabs-directive>
+	<!-- </ion-segment> -->
+  </ion-toolbar>
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content>
+<div [ngSwitch]="segmentModel">
+	<settings-about *ngSwitchCase="'about'"></settings-about>
+    <settings-authorizations *ngSwitchCase="'authorizations'"></settings-authorizations>
+    <settings-default *ngSwitchCase="'default'"></settings-default>
+    <settings-backend *ngSwitchCase="'backend'"></settings-backend>
+</div>
 </ion-content>
